# tinytetris

./: .gitignore  CMakeLists.txt  README.md  app.py  bind.cpp  requirements.txt  tetris_game.cpp  tetris_game.h
static/: script.js  style.css
templates/: index.html
